--- a/static/style.css
+++ b/static/style.css
@@ -1,130 +1,163 @@
 html,
 body {
-    padding: 0px;
-    margin: 0px;
-    width: 100%;
-    height: 100%;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+  padding: 0px;
+  margin: 0px;
+  width: 100%;
+  height: 100%;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 
-    --background-color-lighter: #fff;
-    --background-color: #f5f5f5;
-    --background-color-darker: #e0e3e7;
-    --text-color: #181a1d;
-    --text-color-lighter: #26292e;
-    
-    --highlight-color: #3f97ff;
-    --highlight-text-color: #fff;
-    --divider-color: #c6cdd6;
+  --background-color-lighter: #fff;
+  --background-color: #f5f5f5;
+  --background-color-darker: #e0e3e7;
+  --text-color: #181a1d;
+  --text-color-lighter: #26292e;
+
+  --highlight-color: #3f97ff;
+  --highlight-text-color: #fff;
+  --divider-color: #c6cdd6;
+
+  --highlight-secondary-color: orange;
+
+  scroll-behavior: smooth;
 }
 
 main {
-    background-color: var(--background-color-darker);
-    color: var(--text-color);
+  background-color: var(--background-color-darker);
+  color: var(--text-color);
 }
 
 * {
-    transition: color 0.5s, background-color 0.5s;
+  transition: color 0.5s, background-color 0.5s;
+  scroll-margin-top: 2rem;
 }
 
-#darkMode:checked ~ main {
-    --text-color-lighter: #f5f5f5;
-    --text-color: #e0e3e7;
-    --background-color-darker: #181a1d;
-    --background-color: #26292e;
-    --background-color-lighter: #2e333a;
+#darkMode:checked~main {
+  --text-color-lighter: #f5f5f5;
+  --text-color: #e0e3e7;
+  --background-color-darker: #181a1d;
+  --background-color: #26292e;
+  --background-color-lighter: #2e333a;
 
-    --divider-color: #c6cdd6;
+  --divider-color: #c6cdd6;
 }
 
 .light {
-    color: var(--text-color-lighter);
+  color: var(--text-color-lighter);
 }
 
 a {
-    color: inherit;
+  color: inherit;
 }
 
 a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 .highlight {
-    background-color: var(--highlight-color);
-    color: var(--highlight-text-color);
+  background-color: var(--highlight-color);
+  color: var(--highlight-text-color);
 }
 
 button {
-    border: none;
-    border-radius: 0.375rem;
-    padding: 0.375rem 0.5rem;
-    cursor: pointer;
+  border: none;
+  border-radius: 0.375rem;
+  padding: 0.375rem 0.5rem;
+  cursor: pointer;
 }
 
 button:disabled {
-    filter: grayscale(1);
-    cursor: default;
+  filter: grayscale(1);
+  cursor: default;
 }
 
 select {
-    display: inline-block;
-    /* appearance: none; */
-    font-size: 1em;
-    line-height: 1.5;
-    margin: 0;
-    padding: .375rem 2.25rem .375rem .75rem;
-    color: var(--text-color);
-    background-color: var(--background-color);
-    border: 1px solid var(--background-color-darker); 
-    border-radius: 0.375rem;
+  display: inline-block;
+  /* appearance: none; */
+  font-size: 1em;
+  line-height: 1.5;
+  margin: 0;
+  padding: .375rem 2.25rem .375rem .75rem;
+  color: var(--text-color);
+  background-color: var(--background-color);
+  border: 1px solid var(--background-color-darker);
+  border-radius: 0.375rem;
 }
 
 .rounded {
-    border-radius: 0.375rem;
+  border-radius: 0.375rem;
 }
 
 /*
   1. Use a more-intuitive box-sizing model.
 */
-*, *::before, *::after {
-    box-sizing: border-box;
-  }
-  /*
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+/*
     2. Remove default margin
   */
-  * {
-    margin: 0;
-  }
-  /*
+* {
+  margin: 0;
+}
+
+/*
     Typographic tweaks!
     3. Add accessible line-height
     4. Improve text rendering
   */
-  body {
-    line-height: 1.5;
-    -webkit-font-smoothing: antialiased;
-  }
-  /*
+body {
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+}
+
+/*
     5. Improve media defaults
   */
-  img, picture, video, canvas, svg {
-    display: inline-block;
-    max-width: 100%;
-  }
-  /*
+img,
+picture,
+video,
+canvas,
+svg {
+  display: inline-block;
+  max-width: 100%;
+}
+
+/*
     6. Remove built-in form typography styles
   */
-  input, button, textarea, select {
-    font: inherit;
-  }
-  /*
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/*
     7. Avoid text overflows
   */
-  p, h1, h2, h3, h4, h5, h6 {
-    overflow-wrap: break-word;
-  }
-  /*
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
+}
+
+/*
     8. Create a root stacking context
   */
-  #root, #__next {
-    isolation: isolate;
+#root,
+#__next {
+  isolation: isolate;
+}
+
+@media screen and (max-width: 820px){
+  * {
+    scroll-margin-top: calc(2rem + 3em);
   }
+}
