--- a/static/style.css
+++ b/static/style.css
@@ -4,21 +4,44 @@ body {
   margin: 0px;
   width: 100%;
   height: 100%;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: Nunito, Geneva, Tahoma, sans-serif;
 
   --background-color-lighter: #fff;
-  --background-color: #f5f5f5;
-  --background-color-darker: #e0e3e7;
+  --background-color: #f4f4f4;
+  --background-color-darker: #dde0e4;
   --text-color: #181a1d;
   --text-color-lighter: #26292e;
+  --title-color: #754e36;
 
   --highlight-color: #3f97ff;
   --highlight-text-color: #fff;
-  --divider-color: #c6cdd6;
+  --divider-color: #bec5ce;
 
   --highlight-secondary-color: orange;
 
+  --scrollbar-thumb-bg: #00000019;
+  --scrollbar-thumb-bg-hover: #00000026;
+  --scrollbar-thumb-bg-active: #0000002b;
+  
+  
   scroll-behavior: smooth;
+}
+
+html:has(#darkMode:checked), body:has(#darkMode:checked) {
+  --text-color-lighter: #f5f5f5;
+  --text-color: #e0e3e7;
+  --title-color: #d6d6d6;
+  --background-color-darker: #1b1c20;
+  --background-color: #21252d;
+  --background-color-lighter: #272b33;
+
+  --divider-color: #c6cdd6;
+
+  --scrollbar-thumb-bg: #ffffff19;
+  --scrollbar-thumb-bg-hover: #ffffff26;
+  --scrollbar-thumb-bg-active: #ffffff2b;
+
+  --highlight-color: #3578c8;
 }
 
 main {
@@ -27,18 +50,29 @@ main {
 }
 
 * {
-  transition: color 0.5s, background-color 0.5s;
   scroll-margin-top: 2rem;
+  box-sizing: border-box;
 }
 
-#darkMode:checked~main {
-  --text-color-lighter: #f5f5f5;
-  --text-color: #e0e3e7;
-  --background-color-darker: #181a1d;
-  --background-color: #26292e;
-  --background-color-lighter: #2e333a;
+*::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
 
-  --divider-color: #c6cdd6;
+body::-webkit-scrollbar {
+  background: var(--background-color-darker);
+}
+
+*::-webkit-scrollbar-thumb {
+  background: var(--scrollbar-thumb-bg);
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background: var(--scrollbar-thumb-bg-hover);
+}
+
+*::-webkit-scrollbar-thumb:active {
+  background: var(--scrollbar-thumb-bg-active);
 }
 
 .light {
@@ -64,12 +98,6 @@ button {
   padding: 0.375rem 0.5rem;
   cursor: pointer;
 }
-
-button:disabled {
-  filter: grayscale(1);
-  cursor: default;
-}
-
 select {
   display: inline-block;
   /* appearance: none; */
