--- a/static/style.css
+++ b/static/style.css
@@ -123,7 +123,7 @@ h3 {
   padding: 1.5rem 2rem;
   column-gap: 4.5rem;
   min-height: 100vh;
-  grid-template-columns: 285px 1fr;
+  grid-template-columns: 18rem 1fr;
   grid-template-rows: repeat(2, min-content) 1fr;
   grid-template-areas:
     "header main"
